# llm-perplexity

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  check_models.py  llm_perplexity.py  pyproject.toml  pytest.ini  run_selective_tests.py  run_tests.sh  setup.sh  test_llm_perplexity.py
.github/workflows/: claude-code-review.yml  publish.yml
tests/: README.md  conftest.py  test_conversation.py  test_perplexity.py
tests/cassettes/test_conversation/: test_basic_conversation.yaml
tests/cassettes/test_perplexity/: test_image_analysis.yaml  test_online_model_with_search.yaml  test_standard_model.yaml
