[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-perplexity"
version = "2025.4.1"
description = "LLM access to pplx-api 3 by Perplexity Labs"
readme = "README.md"
authors = [{name = "hex"}]
license = "Apache-2.0"
dependencies = [
    "llm",
    "openai>=1.0.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/hex/llm-perplexity"
Changelog = "https://github.com/hex/llm-perplexity/releases"

[project.entry-points.llm]
perplexity = "llm_perplexity"

[tool.setuptools]
packages = []
py-modules = ["llm_perplexity"]
